syntax = "proto3";

package eventstore;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Append Events
message AppendToStreamRequest {
    string stream_id = 1;
    ExpectedVersion expected_version = 2;
    repeated NewEvent events = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message NewEvent {
    string event_name = 1;
    bytes event_data = 2;
    bytes metadata = 3;
}

message Event {
    uint64 id = 1;
    string stream_id = 2;
    uint64 stream_version = 3;
    string event_name = 4;
    bytes event_data = 5;
    bytes metadata = 6;
    google.protobuf.Timestamp timestamp = 7;
}

message ExpectedVersion {
    oneof version {
        google.protobuf.Empty any = 1;
        google.protobuf.Empty stream_exists = 2;
        google.protobuf.Empty no_stream = 3;
        uint64 exact = 4;
    }
}

message AppendToStreamResponse {
    uint64 first_id = 1;
    google.protobuf.Timestamp timestamp = 2;
}

// Append to multiple streams
message AppendToMultipleStreamsRequest {
    repeated StreamEvents streams = 1;
    google.protobuf.Timestamp timestamp = 2;
}

message StreamEvents {
    string stream_id = 1;
    ExpectedVersion expected_version = 2;
    repeated NewEvent events = 3;
}

message AppendToMultipleStreamsResponse {
    uint64 first_id = 1;
    google.protobuf.Timestamp timestamp = 2;
}

// Get Global Events
message GetEventsRequest {
    uint64 start_event_id = 1;
    uint32 batch_size = 2;
    optional uint64 limit = 3;
}

// Get Stream Events
message GetStreamEventsRequest {
    string stream_id = 1;
    uint64 stream_version = 2;
    uint32 batch_size = 3;
}

// Subscribe
message SubscribeRequest {
    oneof start_from {
        string subscriber_id = 1;
        uint64 event_id = 2;
    }
}

message EventBatch {
    repeated Event events = 1;
}

// Acknowledge
message AcknowledgeRequest {
    string subscriber_id = 1;
    uint64 last_event_id = 2;
}

// Service
service EventStore {
    rpc AppendToStream(AppendToStreamRequest) returns (AppendToStreamResponse);
    rpc AppendToMultipleStreams(AppendToMultipleStreamsRequest) returns (AppendToMultipleStreamsResponse);
    rpc GetEvents(GetEventsRequest) returns (stream EventBatch);
    rpc GetStreamEvents(GetStreamEventsRequest) returns (stream EventBatch);
    rpc Subscribe(SubscribeRequest) returns (stream EventBatch);
    rpc Acknowledge(AcknowledgeRequest) returns (google.protobuf.Empty);
}
